apex-intro/force-app/main/default/objects/Warehouse__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>The state the warehouse is located in.</description>
    <inlineHelpText>The U.S. State the warehouse is located in.</inlineHelpText>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>US_States</valueSetName>
    </valueSet>
</CustomField>