apex-intro/force-app/main/default/objects/Warehouse__c/fields/Max_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Max_Capacity__c</fullName>
    <description>The maximum amount of storage space in a Warehouse.</description>
    <label>Max Capacity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>