apex-intro/force-app/main/default/objects/Warehouse__c/fields/Number_of_Unique_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Unique_Products__c</fullName>
    <description>The amount of unique products in a warehouse.</description>
    <label>Number of Unique Products</label>
    <summaryForeignKey>Inventory__c.Warehouse__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>