apex-intro/force-app/main/default/objects/Warehouse__c/fields/Total_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Count__c</fullName>
    <description>The total number of all products in the warehouse.</description>
    <label>Total Product Count</label>
    <summarizedField>Inventory__c.Quantity__c</summarizedField>
    <summaryForeignKey>Inventory__c.Warehouse__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>